# gibo-wrapper

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  go.mod  go.sum  main.go
.bin/: update-version.sh
.github/workflows/: build.yaml  docker.yaml  publish.yaml  release.yaml  versionup.yaml
.templates/: README.md
cmd/: dummy_root.go  dummy_search.go  dummy_version.go  dump.go  dump_test.go  init.go  list-ignore.go  list-ignore_test.go  version.go  wrapper.go
legacy/: coverage.out
legacy/cmd/: dummy_list.go  dummy_update.go  wrapper.go
src/: cli.rs  dump.rs  list.rs  main.rs  terminal.rs  verboser.rs
testdata/: .gitignore
utils/: fmt.go
